--- a/index.html
+++ b/index.html
@@ -5388,7 +5388,7 @@
 <header>OEDIPUS</header>
 <p data-ln="694">
 	<span id="694#quod" data-intext="quod" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---nn-" data-shortdef="who, which">quod</span>
-	<span id="694#dēst" data-intext="dēst" data-perslemma="desum" data-lemma="dēsum dēesse dēfuī" data-pos="v3spia---" data-shortdef="to be lacking">dēst</span>:
+	<span id="694#dēst" data-intext="dēst" data-perslemma="desum" data-lemma="dēsum dēesse dēfuī" data-pos="v3spia---" data-shortdef="to be lacking">dēst</span>.
 	<span id="694#secunda" data-intext="secunda" data-perslemma="secundus1" data-lemma="secundus –a –um" data-pos="a-p---nn-" data-shortdef="following, second">secunda</span>
 	<span id="694#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
 	<span id="694#habent" data-intext="habent" data-perslemma="habeo" data-lemma="habeō habēre habuī habitus" data-pos="v3ppia---" data-shortdef="to have, hold">habent</span>
@@ -5624,7 +5624,7 @@
 <p data-ln="720">
 	<span id="720#comes" data-intext="comes" data-perslemma="comes" data-lemma="comes comitis m./f." data-pos="n-s---mn-" data-shortdef="companion">comes</span>
 	<span id="720#īre" data-intext="īre" data-perslemma="eo1" data-lemma="eō īre īvī itum" data-pos="v--pna---" data-shortdef="to go">īre</span>
-	<span id="720#vaccae" data-intext="vaccae" data-perslemma="vacca1" data-lemma="vacca vaccae f." data-pos="n-s---fd-" data-shortdef="cow">vaccae</span>,
+	<span id="720#vaccae" data-intext="vaccae" data-perslemma="vacca1" data-lemma="vacca vaccae f." data-pos="n-s---fd-" data-shortdef="cow">vaccae</span>
 	<span id="720#quam" data-intext="quam" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---fa-" data-shortdef="who, which">quam</span>
 	<span id="720#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
 	<span id="720#flexerat" data-intext="flexerat" data-perslemma="flecto" data-lemma="flectō flectere flēxī flexus" data-pos="v3slia---" data-shortdef="to bend">flexerat</span>
@@ -5659,7 +5659,7 @@
 </p>
 <p data-ln="725">
 	<span id="725#prōtulit" data-intext="prōtulit" data-perslemma="profero" data-lemma="prōferō prōferre prōtulī prōlātus" data-pos="v3sria---" data-shortdef="to bring forth">prōtulit</span>
-	<span id="725#tellūs" data-intext="tellūs" data-perslemma="tellus" data-lemma="tellūs –ūris f." data-pos="n-s---fn-" data-shortdef="earth; the Earth (goddess)">tellūs</span>.
+	<span id="725#tellūs" data-intext="tellūs" data-perslemma="tellus" data-lemma="tellūs –ūris f." data-pos="n-s---fn-" data-shortdef="earth; the Earth (goddess)">tellūs</span>:
 	<span id="725#aut" data-intext="aut" data-perslemma="aut" data-lemma="aut" data-pos="c--------" data-shortdef="or, either...or">aut</span>
 	<span id="725#anguis" data-intext="anguis" data-perslemma="anguis" data-lemma="anguis –is m." data-pos="a-s---mn-" data-shortdef="the Dragon or Hydra (constellation)">anguis</span>
 	<span id="725#īmīs" data-intext="īmīs" data-perslemma="imus" data-lemma="imus –a –um" data-pos="a-p---fb-" data-shortdef="deepest, last">īmīs</span>
@@ -5703,7 +5703,7 @@
 </p>
 <p data-ln="732">
 	<span id="732#effūdit" data-intext="effūdit" data-perslemma="effundo" data-lemma="effundō effundere effūdī effūsus" data-pos="v3sria---" data-shortdef="to pour out">effūdit</span>
-	<span id="732#arma" data-intext="arma" data-perslemma="arma" data-lemma="arma armōrum n." data-pos="n-p---na-" data-shortdef="arms, weapons">arma</span>:
+	<span id="732#arma" data-intext="arma" data-perslemma="arma" data-lemma="arma armōrum n." data-pos="n-p---na-" data-shortdef="arms, weapons">arma</span>.
 </p>
 <p data-ln="733">
 	<span id="733#sonuit" data-intext="sonuit" data-perslemma="sono" data-lemma="sonō sonāre sonuī sonitum" data-pos="v3sria---" data-shortdef="to sound">sonuit</span>
@@ -5742,7 +5742,7 @@
 	<span id="738#agmina" data-intext="agmina" data-perslemma="agmen" data-lemma="āgmen āgminis n." data-pos="n-p---nn-" data-shortdef="line of march">agmina</span>
 	<span id="738#campōs" data-intext="campōs" data-perslemma="campus1" data-lemma="campus campī m." data-pos="n-p---ma-" data-shortdef="plain">campōs</span>
 	<span id="738#cognāta" data-intext="cognāta" data-perslemma="cognatus" data-lemma="cognātus –a –um" data-pos="a-p---nn-" data-shortdef="near by birth">cognāta</span>
-	<span id="738#tenent" data-intext="tenent" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v3ppia---" data-shortdef="to hold">tenent</span>,
+	<span id="738#tenent" data-intext="tenent" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v3ppia---" data-shortdef="to hold">tenent</span>
 </p>
 <p data-ln="739">
 	<span id="739#dignaque" data-intext="dignaque" data-perslemma="dignus" data-lemma="dīgnus –a –um" data-pos="a-s---fn-" data-shortdef="worthy">dignaque</span>
@@ -5754,7 +5754,7 @@
 	<span id="740#ūnō" data-intext="ūnō" data-perslemma="unus" data-lemma="ūnus –a –um" data-pos="a-s---mb-" data-shortdef="one">ūnō</span>
 	<span id="740#aetātem" data-intext="aetātem" data-perslemma="aetas" data-lemma="aetās aetātis f." data-pos="n-s---fa-" data-shortdef="age">aetātem</span>
 	<span id="740#permēnsa" data-intext="permēnsa" data-perslemma="permetior" data-lemma="permētior permēnsus" data-pos="v-srppfn-" data-shortdef="to measure completely; traverse">permēnsa</span>
-	<span id="740#diē" data-intext="diē" data-perslemma="dies" data-lemma="diēs diēī m./f." data-pos="n-s---mb-" data-shortdef="day">diē</span>,
+	<span id="740#diē" data-intext="diē" data-perslemma="dies" data-lemma="diēs diēī m./f." data-pos="n-s---mb-" data-shortdef="day">diē</span>:
 </p>
 <p data-ln="741">
 	<span id="741#post" data-intext="post" data-perslemma="post" data-lemma="post" data-pos="r--------" data-shortdef="after (adv. and prep. +acc.)">post</span>
@@ -5869,7 +5869,7 @@
 	<span id="759#quae" data-intext="quae" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-p---na-" data-shortdef="who, which">quae</span>
 	<span id="759#posuit" data-intext="posuit" data-perslemma="pono" data-lemma="pōnō pōnere posuī positus" data-pos="v3sria---" data-shortdef="to place">posuit</span>
 	<span id="759#rētia" data-intext="rētia" data-perslemma="rete" data-lemma="rēte rētis n." data-pos="n-p---na-" data-shortdef="net, trap">rētia</span>
-	<span id="759#vītat" data-intext="vītat" data-perslemma="vito" data-lemma="vītō vītāre vītāvī vītātus" data-pos="v3spia---" data-shortdef="to avoid, shun">vītat</span> —
+	<span id="759#vītat" data-intext="vītat" data-perslemma="vito" data-lemma="vītō vītāre vītāvī vītātus" data-pos="v3spia---" data-shortdef="to avoid, shun">vītat</span>,
 </p>
 <p data-ln="760">
 	<span id="760#dōnec" data-intext="dōnec" data-perslemma="donec" data-lemma="dōnec" data-pos="c--------" data-shortdef="until">dōnec</span>
@@ -5935,7 +5935,7 @@
 	<span id="768#memoria" data-intext="memoria" data-perslemma="memoria" data-lemma="memoria memoriae f." data-pos="n-s---fn-" data-shortdef="memory">memoria</span>
 	<span id="768#tenue" data-intext="tenue" data-perslemma="tenuis" data-lemma="tenuis tenue" data-pos="a-s---na-" data-shortdef="thin">tenue</span>
 	<span id="768#per" data-intext="per" data-perslemma="per" data-lemma="per" data-pos="r--------" data-shortdef="through">per</span>
-	<span id="768#vestīgium" data-intext="vestīgium" data-perslemma="vestigium" data-lemma="vestīgium vestīgiī n." data-pos="n-s---na-" data-shortdef="footstep">vestīgium</span>,
+	<span id="768#vestīgium" data-intext="vestīgium" data-perslemma="vestigium" data-lemma="vestīgium vestīgiī n." data-pos="n-s---na-" data-shortdef="footstep">vestīgium</span>
 </p>
 <p data-ln="769">
 	<span id="769#cecidisse" data-intext="cecidisse" data-perslemma="cado" data-lemma="cadō cadere cecidī cāsum" data-pos="v--rna---" data-shortdef="to fall">cecidisse</span>
@@ -5957,7 +5957,7 @@
 	<span id="771#superbus" data-intext="superbus" data-perslemma="superbus" data-lemma="superbus –a –um" data-pos="a-s---mn-" data-shortdef="proud, arrogant">superbus</span>
 	<span id="771#pelleret" data-intext="pelleret" data-perslemma="pello" data-lemma="pellō pellere pepulī pulsus" data-pos="v3sisa---" data-shortdef="to strike">pelleret</span>,
 	<span id="771#Thēbīs" data-intext="Thēbīs" data-perslemma="Thebae" data-lemma="Thēbae –ārum f.pl." data-pos="n-p---fb-" data-shortdef="Thebes">Thēbīs</span>
-	<span id="771#procul" data-intext="procul" data-perslemma="procul" data-lemma="procul" data-pos="d--------" data-shortdef="at a distance">procul</span>
+	<span id="771#procul" data-intext="procul" data-perslemma="procul" data-lemma="procul" data-pos="d--------" data-shortdef="at a distance">procul</span>,
 </p>
 <p data-ln="772">
 	<span id="772#Phōcaea" data-intext="Phōcaea" data-perslemma="Phocaeus" data-lemma="Phōcaeus –a –um" data-pos="a-s---fn-" data-shortdef="of Phocaea; (m.pl.) the Phocaeans">Phōcaea</span>
@@ -6105,7 +6105,7 @@
 </p>
 <p data-ln="787">
 	<span id="787#ēdissere" data-intext="ēdissere" data-perslemma="edissero" data-lemma="ēdisserō –ere –uī –tus" data-pos="v2spma---" data-shortdef="to state; set forth">ēdissere</span>
-	<span id="787#agedum" data-intext="agedum" data-perslemma="agedum" data-lemma="agedum" data-pos="d--------" data-shortdef="come!">agedum</span>,
+	<span id="787#agedum" data-intext="agedum" data-perslemma="agedum" data-lemma="agedum" data-pos="d--------" data-shortdef="come!">agedum</span>
 	<span id="787#quō" data-intext="quō" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---nb-" data-shortdef="who, which">quō</span>
 	<span id="787#cadat" data-intext="cadat" data-perslemma="cado" data-lemma="cadō cadere cecidī cāsum" data-pos="v3spsa---" data-shortdef="to fall">cadat</span>
 	<span id="787#fātō" data-intext="fātō" data-perslemma="fatum" data-lemma="fātum –ī n." data-pos="n-s---nb-" data-shortdef="destiny, fate">fātō</span>
@@ -6173,7 +6173,7 @@
 <p data-ln="794">
 	<span id="794#repetam" data-intext="repetam" data-perslemma="repeto" data-lemma="repetō repetere repetīvī repetītus" data-pos="v1sfia---" data-shortdef="to demand back">repetam</span>
 	<span id="794#paterna" data-intext="paterna" data-perslemma="paternus" data-lemma="paternus –a –um" data-pos="a-p---na-" data-shortdef="paternal">paterna</span>
-	<span id="794#rēgna" data-intext="rēgna" data-perslemma="regnum" data-lemma="rēgnum rēgnī n." data-pos="n-p---na-" data-shortdef="royal power, kingdom">rēgna</span>;
+	<span id="794#rēgna" data-intext="rēgna" data-perslemma="regnum" data-lemma="rēgnum rēgnī n." data-pos="n-p---na-" data-shortdef="royal power, kingdom">rēgna</span>,
 	<span id="794#sed" data-intext="sed" data-perslemma="sed" data-lemma="sed" data-pos="c--------" data-shortdef="but">sed</span>
 	<span id="794#mātrem" data-intext="mātrem" data-perslemma="mater" data-lemma="māter mātris f." data-pos="n-s---fa-" data-shortdef="mother">mātrem</span>
 	<span id="794#horreō" data-intext="horreō" data-perslemma="horreo" data-lemma="horreō horrēre horruī" data-pos="v1spia---" data-shortdef="to dread">horreō</span>.
@@ -6258,7 +6258,7 @@
 	<span id="801#metūs" data-intext="metūs" data-perslemma="metus" data-lemma="metus metūs m." data-pos="n-p---ma-" data-shortdef="fear, dread, anxiety">metūs</span>
 </p>
 <p data-ln="802">
-	<span id="802#dēpōne" data-intext="dēpōne" data-perslemma="depono" data-lemma="dēpōnō dēpōnere dēposuī dēpositus" data-pos="v2spma---" data-shortdef="to put down">dēpōne</span>.
+	<span id="802#dēpōne" data-intext="dēpōne" data-perslemma="depono" data-lemma="dēpōnō dēpōnere dēposuī dēpositus" data-pos="v2spma---" data-shortdef="to put down">dēpōne</span>:
 	<span id="802#Meropē" data-intext="Meropē" data-perslemma="Merope" data-lemma="Meropē –ēs f." data-pos="n-s---fn-" data-shortdef="Merope, mother of Oedipus">Meropē</span>
 	<span id="802#vēra" data-intext="vēra" data-perslemma="verus" data-lemma="vērus –a –um" data-pos="a-s---fn-" data-shortdef="real, true">vēra</span>
 	<span id="802#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
@@ -6314,7 +6314,7 @@
 	<span id="807#tū" data-intext="tū" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---mn-" data-shortdef="you">tū</span>
 	<span id="807#mē" data-intext="mē" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---ma-" data-shortdef="I, me">mē</span>
 	<span id="807#parentī" data-intext="parentī" data-perslemma="parens" data-lemma="parēns parentis m./f." data-pos="n-s---fd-" data-shortdef="parent">parentī</span>
-	<span id="807#trādis" data-intext="trādis" data-perslemma="trado" data-lemma="tradō tradere trādidī trāditus" data-pos="v2spia---" data-shortdef="to hand over; report">trādis</span>;
+	<span id="807#trādis" data-intext="trādis" data-perslemma="trado" data-lemma="tradō tradere trādidī trāditus" data-pos="v2spia---" data-shortdef="to hand over; report">trādis</span>?
 	<span id="807#at" data-intext="at" data-perslemma="at" data-lemma="at or ast" data-pos="c--------" data-shortdef="but">at</span>
 	<span id="807#quis" data-intext="quis" data-perslemma="quis2" data-lemma="quis quid" data-pos="p-s---mn-" data-shortdef="who, what; (as interrog. adv.) how? why?">quis</span>
 	<span id="807#mē2" data-intext="mē" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---ma-" data-shortdef="I, me">mē</span>
@@ -6450,7 +6450,7 @@
 <header>SENEX</header>
 <p data-ln="820">
 	<span id="820#fortasse" data-intext="fortasse" data-perslemma="fortasse" data-lemma="fortasse or fortassis" data-pos="d--------" data-shortdef="perhaps">fortasse</span>
-	<span id="820#nōscam" data-intext="nōscam" data-perslemma="nosco" data-lemma="nōscō nōscere nōvī nōtus" data-pos="v1spsa---" data-shortdef="to learn, know">nōscam</span>:
+	<span id="820#nōscam" data-intext="nōscam" data-perslemma="nosco" data-lemma="nōscō nōscere nōvī nōtus" data-pos="v1spsa---" data-shortdef="to learn, know">nōscam</span>;
 	<span id="820#saepe" data-intext="saepe" data-perslemma="saepe" data-lemma="saepe" data-pos="d--------" data-shortdef="often">saepe</span>
 	<span id="820#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
 	<span id="820#spatiō" data-intext="spatiō" data-perslemma="spatium" data-lemma="spatium spatiī n." data-pos="n-s---nb-" data-shortdef="space">spatiō</span>
@@ -6478,7 +6478,7 @@
 <p data-ln="823">
 	<span id="823#ducēs" data-intext="ducēs" data-perslemma="dux" data-lemma="dux ducis m./f." data-pos="n-p---mn-" data-shortdef="leader, general">ducēs</span>
 	<span id="823#sequuntur" data-intext="sequuntur" data-perslemma="sequor" data-lemma="sequor sequī secūtus" data-pos="v3ppid---" data-shortdef="to follow, come next">sequuntur</span>:
-	<span id="823#īte" data-intext="īte" data-perslemma="eo1" data-lemma="eō īre īvī itum" data-pos="v2spma---" data-shortdef="to go">īte</span>,
+	<span id="823#īte" data-intext="īte" data-perslemma="eo1" data-lemma="eō īre īvī itum" data-pos="v2spma---" data-shortdef="to go">īte</span>
 	<span id="823#properē" data-intext="properē" data-perslemma="propere" data-lemma="properē" data-pos="d--------" data-shortdef="hastily">properē</span>
 	<span id="823#accersite" data-intext="accersite" data-perslemma="arcesso" data-lemma="arcessō (accersō) arcessere arcessīvī arcessītus" data-pos="v2ppma---" data-shortdef="to fetch, summon">accersite</span>,
 </p>
@@ -8365,7 +8365,7 @@
 	<span id="1059#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="1059#horridus" data-intext="horridus" data-perslemma="horridus" data-lemma="horridus –a –um" data-pos="a-s---mn-" data-shortdef="rough, uncouth">horridus</span>
 	<span id="1059#Morbī" data-intext="Morbī" data-perslemma="morbus" data-lemma="morbus morbī m." data-pos="n-p---mn-" data-shortdef="sickness, disease">Morbī</span>
-	<span id="1059#tremor" data-intext="tremor" data-perslemma="tremor" data-lemma="tremor –ōris m." data-pos="n-s---mn-" data-shortdef="trembling; quaking; tremor">tremor</span>,
+	<span id="1059#tremor" data-intext="tremor" data-perslemma="tremor" data-lemma="tremor –ōris m." data-pos="n-s---mn-" data-shortdef="trembling; quaking; tremor">tremor</span>
 </p>
 <p data-ln="1060">
 	<span id="1060#Maciēsque" data-intext="Maciēsque" data-perslemma="macies" data-lemma="maciēs –ēī f." data-pos="n-s---fn-" data-shortdef="emaciation">Maciēsque</span>
@@ -8379,7 +8379,7 @@
 <p data-ln="1061">
 	<span id="1061#mēcum" data-intext="mēcum" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---mb-" data-shortdef="I, me">mēcum</span>
 	<span id="1061#īte" data-intext="īte" data-perslemma="eo1" data-lemma="eō īre īvī itum" data-pos="v2spma---" data-shortdef="to go">īte</span>,
-	<span id="1061#mēcum2" data-intext="mēcum" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---mb-" data-shortdef="I, me">mēcum</span>.
+	<span id="1061#mēcum2" data-intext="mēcum" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---mb-" data-shortdef="I, me">mēcum</span>:
 	<span id="1061#ducibus" data-intext="ducibus" data-perslemma="dux" data-lemma="dux ducis m./f." data-pos="n-p---mb-" data-shortdef="leader, general">ducibus</span>
 	<span id="1061#hīs" data-intext="hīs" data-perslemma="hic" data-lemma="hic haec hoc" data-pos="p-p---mb-" data-shortdef="this, these">hīs</span>
 	<span id="1061#ūtī" data-intext="ūtī" data-perslemma="utor" data-lemma="ūtor ūtī ūsus" data-pos="v--pnp---" data-shortdef="to use">ūtī</span>
