--- a/index.html
+++ b/index.html
@@ -4046,7 +4046,7 @@
 	<span id="525#rēgnō" data-intext="rēgnō" data-perslemma="regnum" data-lemma="rēgnum rēgnī n." data-pos="n-s---nd-" data-shortdef="royal power, kingdom">rēgnō</span>
 	<span id="525#mūta" data-intext="mūta" data-perslemma="mutus" data-lemma="mūtus –a –um" data-pos="a-s---fn-" data-shortdef="inarticulate, mute">mūta</span>
 	<span id="525#lībertās" data-intext="lībertās" data-perslemma="libertas" data-lemma="lībertās lībertātis f." data-pos="n-s---fn-" data-shortdef="freedom">lībertās</span>
-	<span id="525#obēst" data-intext="obēst" data-perslemma="obsum" data-lemma="obsum obesse obfuī" data-pos="v3spia---" data-shortdef="to be in the way">obēst</span>.
+	<span id="525#obest" data-intext="obest" data-perslemma="obsum" data-lemma="obsum obesse obfuī" data-pos="v3spia---" data-shortdef="to be in the way">obest</span>.
 </p>
 </section>
 <section>
