--- a/index.html
+++ b/index.html
@@ -4614,7 +4614,7 @@
 <p data-ln="596">
 	<span id="596#artēsque" data-intext="artēsque" data-perslemma="ars" data-lemma="ars artis f." data-pos="n-p---fa-" data-shortdef="skill">artēsque</span>
 	<span id="596#nōrat" data-intext="nōrat" data-perslemma="nosco" data-lemma="nōscō nōscere nōvī nōtus" data-pos="v3slia---" data-shortdef="to learn, know">nōrat</span>
-	<span id="596#stupuit" data-intext="stupuit" data-perslemma="stupeo" data-lemma="stupeō –ēre –uī" data-pos="v3sria---" data-shortdef="to be amazed or dazed; to be bewildered">stupuit</span>.
+	<span id="596#stupuit" data-intext="stupuit" data-perslemma="stupeo" data-lemma="stupeō –ēre –uī" data-pos="v3sria---" data-shortdef="to be amazed or dazed; to be bewildered">stupuit</span>;
 	<span id="596#intrepidus" data-intext="intrepidus" data-perslemma="intrepidus" data-lemma="intrepidus –a –um" data-pos="a-s---mn-" data-shortdef="undaunted, intrepid">intrepidus</span>
 	<span id="596#parēns" data-intext="parēns" data-perslemma="parens" data-lemma="parēns parentis m./f." data-pos="n-s---mn-" data-shortdef="parent">parēns</span>
 </p>
