Small fix in 645.

--- a/index.html
+++ b/index.html
@@ -4984,7 +4984,7 @@
 <p data-ln="645">
 	<span id="645#traham" data-intext="traham" data-perslemma="traho" data-lemma="trahō trahere trāxī tractus" data-pos="v1sfia---" data-shortdef="to drag">traham</span>
 	<span id="645#sonantēs" data-intext="sonantēs" data-perslemma="sono" data-lemma="sonō sonāre sonuī sonitum" data-pos="v-pppama-" data-shortdef="to sound">sonantēs</span>
-	<span id="645#verberā" data-intext="verberā" data-perslemma="verber" data-lemma="verber –eris n." data-pos="n-p---na-" data-shortdef="whip; a beating or blow with a whip">verberā</span>,
+	<span id="645#verbera" data-intext="verbera" data-perslemma="verber" data-lemma="verber –eris n." data-pos="n-p---na-" data-shortdef="whip; a beating or blow with a whip">verbera</span>,
 	<span id="645#incestam" data-intext="incestam" data-perslemma="incestus" data-lemma="incestus –a –um" data-pos="a-s---fa-" data-shortdef="unclean, impure, polluted">incestam</span>
 	<span id="645#domum" data-intext="domum" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fa-" data-shortdef="house, home">domum</span>
 </p>
