--- a/index.html
+++ b/index.html
@@ -5241,7 +5241,7 @@
 <section>
 <header>OEDIPUS</header>
 <p data-ln="678">
-	<span id="678#hortārīs" data-intext="hortārīs" data-perslemma="hortor" data-lemma="hortor hortārī hortātus" data-pos="v2spid---" data-shortdef="to urge">hortārīs</span>
+	<span id="678#hortāris" data-intext="hortāris" data-perslemma="hortor" data-lemma="hortor hortārī hortātus" data-pos="v2spid---" data-shortdef="to urge">hortāris</span>
 	<span id="678#etiam" data-intext="etiam" data-perslemma="etiam" data-lemma="etiam" data-pos="c--------" data-shortdef="also">etiam</span>
 	<span id="678#sponte" data-intext="sponte" data-perslemma="sponte" data-lemma="sponte" data-pos="n-s---fb-" data-shortdef="voluntarily">sponte</span>
 	<span id="678#dēpōnam" data-intext="dēpōnam" data-perslemma="depono" data-lemma="dēpōnō dēpōnere dēposuī dēpositus" data-pos="v1spsa---" data-shortdef="to put down">dēpōnam</span>
