--- a/index.html
+++ b/index.html
@@ -7167,6 +7167,11 @@
 	<span id="907#implicitās" data-intext="implicitās" data-perslemma="implico" data-lemma="implicō implicāre implicāvī (implicuī) implicitus" data-pos="v-prppfa-" data-shortdef="to fold in; involve">implicitās</span>
 	<span id="907#puer" data-intext="puer" data-perslemma="puer" data-lemma="puer puerī m." data-pos="n-s---mn-" data-shortdef="boy, slave">puer</span>
 </p>
+<p data-ln="908">
+	<span id="908#compede" data-intext="compede" data-perslemma="compes" data-lemma="compēs compedis f." data-pos="n-s---fb-" data-shortdef="shackles, chains (for the feet)">compede</span>
+	<span id="908#audācis" data-intext="audācis" data-perslemma="audax" data-lemma="audāx" data-pos="a-s---fg-" data-shortdef="bold; reckless">audācis</span>
+	<span id="908#viae" data-intext="viae" data-perslemma="via" data-lemma="via viae f." data-pos="n-s---fg-" data-shortdef="street">viae</span>
+</p>
 <p data-ln="909">
 	<span id="909#quidquid" data-intext="quidquid" data-perslemma="quisquis" data-lemma="quisquis quidquid or quicquid" data-pos="p-s---nn-" data-shortdef="whoever, whichever">quidquid</span>
 	<span id="909#excessit" data-intext="excessit" data-perslemma="excedo" data-lemma="excēdō excēdere excessī excessus" data-pos="v3sria---" data-shortdef="to go out/away">excessit</span>
