And the period.

--- a/index.html
+++ b/index.html
@@ -7170,7 +7170,7 @@
 <p data-ln="908">
 	<span id="908#compede" data-intext="compede" data-perslemma="compes" data-lemma="compēs compedis f." data-pos="n-s---fb-" data-shortdef="shackles, chains (for the feet)">compede</span>
 	<span id="908#audācis" data-intext="audācis" data-perslemma="audax" data-lemma="audāx" data-pos="a-s---fg-" data-shortdef="bold; reckless">audācis</span>
-	<span id="908#viae" data-intext="viae" data-perslemma="via" data-lemma="via viae f." data-pos="n-s---fg-" data-shortdef="street">viae</span>
+	<span id="908#viae" data-intext="viae" data-perslemma="via" data-lemma="via viae f." data-pos="n-s---fg-" data-shortdef="street">viae</span>.
 </p>
 <p data-ln="909">
 	<span id="909#quidquid" data-intext="quidquid" data-perslemma="quisquis" data-lemma="quisquis quidquid or quicquid" data-pos="p-s---nn-" data-shortdef="whoever, whichever">quidquid</span>
