Corrected meto < metior.

--- a/index.html
+++ b/index.html
@@ -6070,7 +6070,7 @@
 <p data-ln="783">
 	<span id="783#decima" data-intext="decima" data-perslemma="decimus1" data-lemma="decimus –a –um" data-pos="a-s---fn-" data-shortdef="tenth">decima</span>
 	<span id="783#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
-	<span id="783#mētītur" data-intext="mētītur" data-perslemma="metior" data-lemma="mētior mētīrī mēnsus" data-pos="v3spid---" data-shortdef="to measure">mētītur</span>
+	<span id="783#metitur" data-intext="metitur" data-perslemma="meto" data-lemma="metō metere messuī messus" data-pos="v3spip---" data-shortdef="to reap, gather">metitur</span>
 	<span id="783#seges" data-intext="seges" data-perslemma="seges" data-lemma="seges –etis f." data-pos="n-s---fn-" data-shortdef="field of grain; standing corn">seges</span>.
 </p>
 </section>
