Scansion corrections line 826.

--- a/index.html
+++ b/index.html
@@ -6502,9 +6502,9 @@
 	<span id="825#occulit" data-intext="occulit" data-perslemma="occulo" data-lemma="occulō occulere occuluī occultus" data-pos="v3spia---" data-shortdef="to cover">occulit</span>,
 </p>
 <p data-ln="826">
-	<span id="826#latere" data-intext="latere" data-perslemma="lateo" data-lemma="lateō latēre latuī" data-pos="v--pna---" data-shortdef="to lie hidden, be hidden">latere</span>
+	<span id="826#latēre" data-intext="latēre" data-perslemma="lateo" data-lemma="lateō latēre latuī" data-pos="v--pna---" data-shortdef="to lie hidden, be hidden">latēre</span>
 	<span id="826#semper" data-intext="semper" data-perslemma="semper" data-lemma="semper" data-pos="d--------" data-shortdef="always">semper</span>
-	<span id="826#patēre" data-intext="patēre" data-perslemma="patior" data-lemma="patior patī passus" data-pos="v2spmp---" data-shortdef="to permit, endure">patēre</span>
+	<span id="826#patere" data-intext="patere" data-perslemma="patior" data-lemma="patior patī passus" data-pos="v2spmp---" data-shortdef="to permit, endure">patere</span>
 	<span id="826#quod" data-intext="quod" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---nn-" data-shortdef="who, which">quod</span>
 	<span id="826#latuit" data-intext="latuit" data-perslemma="lateo" data-lemma="lateō latēre latuī" data-pos="v3sria---" data-shortdef="to lie hidden, be hidden">latuit</span>
 	<span id="826#diū" data-intext="diū" data-perslemma="diu" data-lemma="diū" data-pos="d--------" data-shortdef="for a long time">diū</span>:
