Added a macron to plaga.

--- a/index.html
+++ b/index.html
@@ -6668,7 +6668,7 @@
 	<span id="844#opīmōs" data-intext="opīmōs" data-perslemma="opimus" data-lemma="opīmus –a –um" data-pos="a-p---ma-" data-shortdef="rich, fertile">opīmōs</span>
 	<span id="844#sub" data-intext="sub" data-perslemma="sub" data-lemma="sub" data-pos="r--------" data-shortdef="under">sub</span>
 	<span id="844#Cithaerōnis" data-intext="Cithaerōnis" data-perslemma="Cithaeron" data-lemma="Cithaerōn –ōnis m." data-pos="n-s---mg-" data-shortdef="Cithaeron">Cithaerōnis</span>
-	<span id="844#plāga" data-intext="plāga" data-perslemma="plaga3" data-lemma="plaga –ae f." data-pos="n-s---fb-" data-shortdef="tract">plāga</span>?
+	<span id="844#plāgā" data-intext="plāgā" data-perslemma="plaga3" data-lemma="plaga –ae f." data-pos="n-s---fb-" data-shortdef="tract">plāgā</span>?
 </p>
 </section>
 <section>
